# risky-secret-santa

./: README.md  pyproject.toml
.github/workflows/: pylint.yml  python-app.bak  python-app.yml
instance/: user-config.ini
secret_santa/: __init__.py  db.py  email_interface.py  resend_email.py  user_page.py
tests/: test_db.py
