[project]
name = "secret-santa"
version = "0.1.0"
description = ""
authors = [{ name = "hfa224", email = "helenffionadams@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "flask>=3.0.0,<4",
    "google-api-python-client>=2.106.0,<3",
    "google-auth-httplib2>=0.1.1,<0.2",
    "google-auth-oauthlib>=1.1.0,<2",
    "flask-mail>=0.10.0,<0.11",
    "python-dotenv>=1.0.1,<2",
    "pytest>=8.3.2,<9",
    "coverage>=7.6.1,<8",
    "sendgrid>=6.11.0,<7",
    "mailersend>=2.0.0",
    "dotenv>=0.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
